--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "manifest_version": 3,
   "permissions": ["activeTab", "storage"],
-  "host_permissions": ["http://127.0.0.1:8000/*"],
+  "host_permissions": [
+    "http://127.0.0.1:8000/*",
+    "https://job-pilot-f8sd.onrender.com/*"
+  ],
   "action": {
     "default_title": "JobPilot",
     "default_popup": "popup.html"
